# sms-shield-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  util.py
api/: v1_api.py
api/routes/: analize.py  analytics.py
models/: spam_classifier.pkl  vectorizer.pkl
prompts/: prompt.py
schemas/: analize_schema.py  analytics_schema.py  return_schema.py
services/: agent_service.py
